<resources>
    <string name="app_name">Attendance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_details">Add Details</string>
    <string name="view_details">View Details</string>
    <string name="view_edit_details">View/Edit Details</string>
    <string name="view_reports">View Reports</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_name">Class Name</string>
    <string name="view_edit">View/Edit</string>

    <!-- TODO: Add Fragments Tabs Name -->
    <string name="add_teacher">Add Teacher</string>
    <string name="add_class">Add Class</string>
    <string name="add_student">Add Student</string>

    <!-- TODO: Add Class Strings-->
    <string name="course_name">Course Name</string>
    <string name="semester">Semester</string>
    <string name="teacher_email">Teacher Email</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="submit_btn_txt">Submit</string>

    <!-- TODO: Add Teacher Strings-->
    <string name="name">Name</string>
    <string name="contact">Contact No.</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="qualification">Highest Qualification</string>

    <!-- TODO: Add Student Strings-->
    <string name="class_txt">Class</string>
    <string name="edit_class">Edit Class Details</string>
    <string name="check_mandatory">Please fill all the mandatory fields</string>

    <string name="email_msg">Invalid Email Address</string>
    <string name="student_name">Student Name</string>


    <!-- TODO: Add Attendance Strings-->
    <string name="absent">Absent</string>
    <string name="prsent">Present</string>
    <string name="late">Late</string>
    <string name="sick">Sick</string>
    <string name="total">Total Student</string>
    <string name="edit_student">Edit Student Details</string>
    <string name="edit_teacher_details">Edit Teacher Details</string>
    <string name="student_email_id">Student Email Id</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="_1_absent">1. Absent</string>
    <string name="_2_sick">2. Sick</string>
    <string name="_3_late">3. Late</string>
    <string name="_4_present">4. Present</string>
    <string name="report">Report</string>

    <string name="list_empty">List is Empty</string>

</resources>
