<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="5dp"
    android:paddingEnd="10dp"
    tools:context=".fragments.StudentViewReportFragment">

    <com.attendance.custom_classes.CustomTextInputLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/til_reportStudentEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_email_id">
        <com.attendance.custom_classes.CustomAutoCompleteTextView
            android:id="@+id/ac_reportStudentEmailId"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.attendance.custom_classes.CustomTextInputLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/til_reportStudentEmailId"
        android:id="@+id/llCalendar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <com.attendance.custom_classes.CustomTextInputLayout
            android:id="@+id/til_month"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/month">
            <com.attendance.custom_classes.CustomSpinner
                android:id="@+id/sp_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.attendance.custom_classes.CustomTextInputLayout>

        <com.attendance.custom_classes.CustomTextInputLayout
            android:id="@+id/til_year"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/year">
            <com.attendance.custom_classes.CustomSpinner
                android:id="@+id/sp_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.attendance.custom_classes.CustomTextInputLayout>

    </LinearLayout>

    <Button
        app:layout_constraintTop_toBottomOf="@id/llCalendar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/btn_report"
        android:layout_marginTop="15dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="12sp"
        android:text="@string/report"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/button_bg"
        android:layout_width="150dp"
        android:layout_height="35dp"/>

    <com.jjoe64.graphview.GraphView
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btn_report"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/graph" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_status"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/_1_absent"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/_2_sick"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/_3_late"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/_4_present"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>