<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:drawablePadding="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_back"
        android:id="@+id/tvStudentBack"
        android:text="@string/edit_student"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <ScrollView
        android:fillViewport="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.attendance.custom_classes.CustomTextInputLayout
                android:id="@+id/til_editStudentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name">
                <com.attendance.custom_classes.CustomInputEditText
                    android:id="@+id/et_editStudentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.attendance.custom_classes.CustomTextInputLayout>

            <com.attendance.custom_classes.CustomTextInputLayout
                android:id="@+id/til_editCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_name">
                <com.attendance.custom_classes.CustomSpinner
                    android:id="@+id/sp_editCourseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.attendance.custom_classes.CustomTextInputLayout>

            <com.attendance.custom_classes.CustomTextInputLayout
                android:id="@+id/til_editPhone"
                android:layout_width="match_parent"
                android:hint="@string/contact"
                android:layout_height="wrap_content">
                <com.attendance.custom_classes.CustomInputEditText
                    android:id="@+id/et_editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>
            </com.attendance.custom_classes.CustomTextInputLayout>

            <Button
                android:id="@+id/btn_editSubmit"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="12sp"
                android:text="@string/submit_btn_txt"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/button_bg"
                android:layout_width="150dp"
                android:layout_height="35dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>