<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ClassDetailsFragment">

    <LinearLayout
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/teacher_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/class_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/view_edit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@+id/llHeader"
        android:layout_marginTop="5dp"
        android:id="@+id/rcvEditTeacher"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>